<resources>
    <string name="app_name">Password Saver</string>
    <string name="addRecord">Добавить запись</string>
    <string name="addUser">Новый пользователь</string>
    <string name="welcome_text">Введите пароль</string>
    <string name="enter">Войти</string>
    <string name="passwordHint">(Пароль должен состоять из шести символов)</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="passwordsJson">Json с паролями</string>
    <string name="ready">Готово</string>
    <string name="site">Сайт</string>
    <string name="no">Нет</string>
    <string name="resource">Ресурс</string>
    <string name="login">Логин</string>
    <string name="email">e-mail</string>
    <string name="password">Пароль</string>
    <string name="fade">Скрыт</string>
    <string name="resourceList">Список ресурсов</string>
    <string name="copyInBuffer">Копировать в буфер</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="goToResource">Перейти на сайт</string>
    <string name="todo">TODO</string>
    <string name="passwordsNotEquals">Пароли не совпадают</string>
    <string name="recordUpdateSucsessfully">Запись успешно обновлена</string>
    <string name="recordIsNotExist">Ошибка, запись не найдена</string>
    <string name="recordDeleteFailed">Не удалось удалить запись</string>
    <string name="recordDeleted">Запись удалена</string>
    <string name="approveDeleteRecord">Удалить запись?</string>
    <string name="cancel">Отмена</string>
    <string name="warning">Внимание!</string>
    <string name="passwordMask">***************</string>
    <string name="attemptsWarning">Введен неверный пароль, осталось попыток: </string>
    <string name="noAttempts">Вы ввели неверный пароль трижды, попробуйте позднее.</string>
    <string name="addingUserSuccessfully">Пользователь успешно добавлен</string>
    <string name="easyPassword">Слишком легкий пароль, введите другой</string>
    <string name="demandForPasswordLength">Пароль должен состоять минимум из ШЕСТИ символов</string>
    <string name="demandForPasswordCharacters">Пароль должен содержать минимум одну цифру и букву</string>
    <string name="repeatResource">Указанный ресурс уже существует. Все равно добавить?</string>
    <string name="repeatLoginResource">Ресурс с таким логином уже существует</string>
    <string name="emptyResourceName">Поле ввода РЕСУРС не заполнено</string>
    <string name="emptyPassword">Поле ввода ПАРОЛЬ не заполнено</string>
    <string name="emptyLogin">Поле ввода ЛОГИН не заполнено</string>
    <string name="recordAddedSucsessfully">Запись успешно добавлена</string>
    <string name="dataError">Ошибка, данные не указаны</string>
    <string name="copiedToClipboard">Скопировано в буфер</string>
    <string name="siteNotFound">Сайт не найден!</string>
    <string name="generatePassword">СГЕНЕРИРОВАТЬ ПАРОЛЬ</string>
    <string name="comment">Комментарий</string>
    <string name="format_brackets">(%s)</string>
    <string name="favorite">Избранное</string>
    <string name="search">Поиск</string>
    <string name="exportToFile">Экспорт в JSON файл</string>
    <string name="passwordsSavedToFile">Пароли сохранены в файл</string>
    <string name="fileNotFound">Файл не доступен</string>
    <string name="folderNotExist">Путь не доступен</string>
    <string name="exportToFileError">Ошибка экспорта в файл</string>
    <string name="ErrorAccessingTheApplicationSettingsFile">Ошибка доступа к файлу настроек приложения!</string>
    <string name="ErrorImportingPasswordsFromFile">Ошибка при импорте паролей из файла</string>
    <string name="importFromFile">Импорт из JSON файла</string>
    <string name="exportToTxtFile">Экспорт в текстовый файл</string>
    <string name="importCompletedSuccessfully">Импорт успешно завершен</string>
    <string name="thereAreNoRecordsToExport">Отсутствуют записи для экспорта!</string>
    <string name="selectDirectory">Выбор директории</string>
    <string name="selectFile">Выбор файла</string>
    <string name="fingerError">Ошибка проверки биометрии</string>
    <string name="fingerEnter">Войти по биометрии</string>
    <string name="theme_settings">Тема приложения</string>
    <string name="theme_system">Системная</string>
    <string name="theme_light">Светлая</string>
    <string name="theme_dark">Тёмная</string>
    <string name="theme_summary">Выберите тему приложения</string>
    <string name="settings">Настройки</string>
</resources>
