<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.a8pade8.passwordsaver.activities.MainActivity">
    <item
        android:id="@+id/searchBar"
        android:icon="@drawable/ic_search_32"
        android:title="@string/search"
        app:showAsAction="ifRoom|withText"
        app:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/action_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_star_32"
        android:onClick="showFavorite"
        android:iconTint="@color/colorContrastDark"
        android:title="@string/favorite"/>
    <item
        android:icon="@drawable/ic_action_menu"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/export_to_file"
                android:title="@string/exportToFile"
                android:onClick="exportToFile"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_from_file"
                android:title="@string/importFromFile"
                android:onClick="importFromFile"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>