<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.a8pade8.passwordsaver.activities.AddUserActivity">

    <data>

        <variable
            name="password"
            type="String" />

        <variable
            name="passwordReplay"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mainToolbar"
            style="@style/mainToolBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/newUserTextView"
            style="@style/largeLabel"
            android:layout_marginTop="64dp"
            android:text="@string/addUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainToolbar" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="136dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainToolbar" />

        <TextView
            android:id="@+id/passwordTextView"
            style="@style/largeLabel"
            android:layout_width="wrap_content"
            android:layout_above="@+id/passwordBox"
            android:labelFor="@id/passwordBox"
            android:text="@string/welcome_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/hintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordBox"
            android:layout_centerHorizontal="true"
            android:text="@string/passwordHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

        <EditText
            android:id="@+id/passwordBox"
            style="@style/inputField"
            android:layout_width="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@={password}"
            android:textAlignment="center"
            android:textColor="?attr/actionMenuTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hintTextView"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/repeatPasswordTextView"
            style="@style/largeLabel"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:labelFor="@id/repeatPasswordEditText"
            android:text="@string/repeatPassword"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordBox" />

        <EditText
            android:id="@+id/repeatPasswordEditText"
            style="@style/inputField"
            android:layout_width="wrap_content"
            android:layout_alignStart="@+id/passwordBox"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@={passwordReplay}"
            android:textAlignment="center"
            android:textColor="?attr/actionMenuTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatPasswordTextView"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/readyButton"
            style="@style/button"
            android:onClick="addNewUser"
            android:text="@string/ready"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
