<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        style="@style/mainToolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/resourceTextView"
        style="@style/largeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainToolbar" />

    <ImageButton
        android:id="@+id/goToWebSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_small_margin"
        android:background="@color/transparent"
        android:contentDescription="@string/copyInBuffer"
        android:onClick="goToResource"
        android:src="@drawable/ic_web"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/loginTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/resourceTextView" />

    <TextView
        android:id="@+id/loginTextView"
        style="@style/label"
        android:labelFor="@id/loginEditText"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resourceTextView" />

    <TextView
        android:id="@+id/login"
        style="@style/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <TextView
        android:id="@+id/passwordTextView"
        style="@style/label"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/password"
        style="@style/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

    <com.github.zagum.switchicon.SwitchIconView
        android:id="@+id/passwordToggleButton"
        style="@style/imageToggleButton"
        android:layout_marginEnd="@dimen/horizontal_small_margin"
        android:onClick="switchFadePassword"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/copyToClipboard"
        app:layout_constraintTop_toTopOf="@+id/password"
        app:si_enabled="false"
        app:srcCompat="@drawable/ic_visibility" />



    <ImageButton
        android:id="@+id/copyToClipboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_small_margin"
        android:layout_marginEnd="@dimen/horizontal_small_margin"
        android:background="@color/transparent"
        android:contentDescription="@string/copyInBuffer"
        android:onClick="copyInBuffer"
        android:src="@drawable/ic_copy"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordToggleButton" />

    <TextView
        android:id="@+id/commentTextView"
        style="@style/label"
        android:accessibilityTraversalAfter="@id/passwordEditText"
        android:labelFor="@id/commentEditText"
        android:text="@string/comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/comment"
        style="@style/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentTextView" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/copyInBuffer"
        android:onClick="edit"
        android:src="@drawable/ic_edit"
        android:tint="@color/colorPrimary"
        android:layout_marginTop="@dimen/vertical_large_margin"
        app:layout_constraintEnd_toStartOf="@+id/favoriteToggleButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/deleteButton"
        app:layout_constraintTop_toBottomOf="@+id/comment" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/copyInBuffer"
        android:onClick="delete"
        android:src="@drawable/ic_delete"
        android:tint="@color/colorDanger"
        android:layout_marginTop="@dimen/vertical_large_margin"
        app:layout_constraintEnd_toStartOf="@+id/editButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment" />

    <TextView
        android:id="@+id/deleteTextView"
        android:text="@string/delete"
        style="@style/smallLabel"
        app:layout_constraintEnd_toEndOf="@+id/deleteButton"
        app:layout_constraintStart_toStartOf="@+id/deleteButton"
        app:layout_constraintTop_toBottomOf="@+id/deleteButton" />

    <com.github.zagum.switchicon.SwitchIconView
        android:id="@+id/favoriteToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchFavorite"
        android:layout_marginTop="@dimen/vertical_large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editButton"
        app:layout_constraintTop_toBottomOf="@+id/comment"
        app:si_animation_duration="500"
        app:si_disabled_alpha="0.3"
        app:si_disabled_color="@color/colorPrimaryDark"
        app:si_enabled="false"
        app:si_no_dash="true"
        app:si_tint_color="@color/colorPrimary"
        app:srcCompat="@drawable/ic_star_32" />

    <TextView
        android:id="@+id/favoriteTextView"
        style="@style/smallLabel"
        android:text="@string/favorite"
        app:layout_constraintEnd_toEndOf="@+id/favoriteToggleButton"
        app:layout_constraintStart_toStartOf="@+id/favoriteToggleButton"
        app:layout_constraintTop_toBottomOf="@+id/favoriteToggleButton" />

    <TextView
        android:id="@+id/editTextView"
        style="@style/smallLabel"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="@+id/editButton"
        app:layout_constraintStart_toStartOf="@+id/editButton"
        app:layout_constraintTop_toBottomOf="@+id/editButton" />
</androidx.constraintlayout.widget.ConstraintLayout>

