<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.a8pade8.passwordsaver.AddRecordActivity"
    android:background="@android:color/darker_gray">

    <Button
        android:text="@string/ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/buttonReady"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="onReady" />

    <TextView
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:gravity="center_horizontal" />

    <TextView
        android:text="@string/Resource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="25dp"
        android:id="@+id/textView7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textStyle="normal|bold"
        android:textAlignment="viewStart"
        android:gravity="start" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/toggleButtonSite"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textOff="@string/site"
        android:textOn="@string/no"
        android:checked="false"
        android:onClick="onSwitchSite" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextResourse"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/toggleButtonSite"
        android:textAlignment="viewStart"
        android:textColor="?attr/actionMenuTextColor"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="start"
        android:autofillHints="TODO"
        tools:ignore="LabelFor" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/toggleButtonEmail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textOff="@string/email"
        android:textOn="@string/no"
        android:onClick="onSwitchEmail" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/toggleButtonEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextLogin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textAutoComplete|textEmailAddress"
        android:textAlignment="viewStart"
        android:textColor="?attr/actionMenuTextColor"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="start"
        android:autofillHints="TODO"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/textView10"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="normal|bold"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/toggleButtonFade"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textOff="@string/fade"
        android:textOn="@string/no"
        android:checked="false"
        android:onClick="onSwitchFade" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_below="@+id/toggleButtonFade"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="viewStart"
        android:textColor="?attr/actionMenuTextColor"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="start"
        android:autofillHints="TODO"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/replayPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView11"
        android:layout_below="@+id/editTextPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextPasswordReplay"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="viewStart"
        android:textColor="?attr/actionMenuTextColor"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="start"
        android:autofillHints="TODO"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView9"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/editTextResourse"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
